// The online diagram is authoritative. This is a local, convenience copy and may be out of date
// https://www.dbdiagram.io/d/retreat-6445306c6b319470510c0fb2

// Use DBML to define your database structure
// Docs: https://github.com/holistics/dbml/tree/master/dbml-homepage/docs

Table scenario {
  scenario_id integer [not null, increment, primary key]
  scenario_name varchar [not null]
  scenario_descr varchar
  account_type_id integer [not null]
  created_at timestamp [default: `now()`]
  modified_at timestamp [default: `now()`]
  Indexes {
    (scenario_name, account_type_id) [unique]
  }
}

Table account_type {
  account_type_id integer [not null, primary key]
  account_type_name varchar [not null, unique]
  account_type_descr varchar
  created_at timestamp [default: `now()`]
  modified_at timestamp [default: `now()`]
}

Table income_type {
  income_type_id integer [not null, primary key]
  income_type_name varchar [not null, unique]
  income_type_descr varchar
  created_at timestamp [default: `now()`]
  modified_at timestamp [default: `now()`]
}

Table expense {
  expense_id integer [not null, increment, primary key]
  scenario_id integer [not null]
  expense_name varchar [not null]
  expense_descr varchar
  amount DECIMAL(13, 2) [not null]
  inflation_rate DECIMAL(5, 3) [not null]
  begin_year integer
  begin_month integer
  end_year integer
  end_month integer
  repeat_every integer
  created_at timestamp [default: `now()`]
  modified_at timestamp [default: `now()`]
  Indexes {
    (expense_name, scenario_id) [unique]
  }
}

Table asset {
  asset_id integer [not null, increment, primary key]
  scenario_id integer [not null]
  asset_name varchar [not null]
  asset_descr varchar
  priority int
  opening_balance DECIMAL(13, 2) [not null]
  max_withdrawal DECIMAL(13, 2)
  apr DECIMAL(5, 3)
  income_type_id integer
  begin_after integer
  begin_year integer
  begin_month integer
  ignore_until_year integer
  ignore_until_month integer
  created_at timestamp [default: `now()`]
  modified_at timestamp [default: `now()`]
  Indexes {
    (asset_name, scenario_id) [unique]
  }
}

Table earnings {
  earnings_id integer [not null, increment, primary key]
  scenario_id integer [not null]
  earnings_name varchar [not null]
  earnings_descr varchar
  amount DECIMAL(13, 2) [not null]
  inflation_rate DECIMAL(5, 3) [not null]
  income_type_id integer
  begin_year integer
  begin_month integer
  end_year integer
  end_month integer
  repeat_every integer
  created_at timestamp [default: `now()`]
  modified_at timestamp [default: `now()`]
  Indexes {
    (earnings_name, scenario_id) [unique]
  }
}

Table simulation {
  simulation_id integer [not null, increment, primary key]
  simulation_name varchar [not null, unique]
  simulation_descr varchar
  scenario_id__expense integer [not null]
  scenario_id__asset integer [not null]
  scenario_id__earnings integer [not null]
  periods integer
  start_year integer
  start_month integer
  created_at timestamp [default: `now()`]
  modified_at timestamp [default: `now()`]
}

Ref: scenario.account_type_id > account_type.account_type_id

Ref: expense.scenario_id > scenario.scenario_id

Ref: asset.scenario_id > scenario.scenario_id
Ref: asset.begin_after > asset.asset_id
Ref: asset.income_type_id > income_type.income_type_id

Ref: earnings.scenario_id > scenario.scenario_id
Ref: earnings.income_type_id > income_type.income_type_id

Ref: simulation.scenario_id__expense > scenario.scenario_id
Ref: simulation.scenario_id__asset > scenario.scenario_id
Ref: simulation.scenario_id__earnings > scenario.scenario_id
